Create Product Repository

--- a/be/.env
+++ b/be/.env
@@ -1,9 +1,14 @@
+# App configuration
+PORT=8888
+DEBUG=true
+
 # Database configuration
-POSTGRES_HOST=localhost
-POSTGRES_PORT=5432
-POSTGRES_USER=gorm
-POSTGRES_PASSWORD=gorm
-POSTGRES_DB=gorm
+DB_HOST=localhost
+DB_PORT=5432
+DB_USER=postgres
+DB_PASSWORD=postgres
+DB_NAME=task
+DB_TYPE=postgres
 POSTGRES_SSL_MODE=disable
 POSTGRES_TIMEZONE=Asia/Shanghai
 
